<resources>
    <string name="app_name">EurocodeFilms</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="btn_acceder">Acceder</string>
    <string name="hintetEmail">Email</string>
    <string name="hintetPassword">Contraseña</string>
    <string name="btn_registrar">Registrar</string>
    <string name="btn_borrar_cuenta">Borrar Cuenta</string>
    <string name="borrar_ok">Cuenta borrada correctamente</string>
    <string name="borrar_no_ok">Error al eliminar la cuenta</string>
    <string name="no_datos">Falta email o contraseña</string>
    <string name="registro_ok">El usuario ha sido registrado</string>
    <string name="registro_no_ok">Error al registrar usuario</string>
    <string name="email_no_valido">Formato de email introducido no válido</string>
    <string name="pwd_no_valido">La contraseña no cumple con los requisitos</string>
    <string name="pwd_no_ok">Contraseña incorrecta</string>
    <string name="tvcartelera">Salas:</string>
    <string name="btnCartelera">Ver Cartelera</string>
    <string name="et_nueva_pwd">Nueva contraseña</string>
    <string name="btn_cambiar_pwd">Cambiar contraseña</string>
    <string name="cambiar_pwd_ok">Contraseña actualizada</string>
    <string name="cambiar_pwd_no_ok">Error al cambiar la contraseña</string>
    <string name="tv_valid_pwd">La contraseña debe contener al menos una mayúscula, una minúscula, un número y uno de los siguientes caracteres especiales: ?¿!#%$</string>
    <string name="tituloCartelera">CARTELERA:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tituloTaquilla">TAQUILLA</string>
    <string name="titulo_pelicula">TITULO:</string>
    <string name="sinopsis_pelicula">SINOPSIS:</string>
    <string name="sala_pelicula">SALA:</string>
    <string name="tv_entradas">Nº Entradas:</string>
    <string name="tv_precio">Precio:</string>
    <string name="btnEntradas">COMPRAR ENTRADAS</string>
    <string name="tv_agradecimiento">!!!DISFRUTE DE LA PELÍCULA!!!</string>
    <string name="tv_asientos">ELIJA SUS ASIENTOS</string>
    <string name="fila">Fila</string>
    <string name="intrFila">Elija Fila</string>
    <string name="asiento">Asiento:</string>
    <string name="intAsiento">Asiento</string>
    <string name="btn_elige_asientos">ELIGE ASIENTO</string>
    <string name="compra_hecha">"Entradas compradas"</string>
    <string name="tv_horario">Hora de la sesión:</string>
    <string name="selecciona_asiento">No se han seleccionado asientos</string>
    <string name="selecciona_horario">No se ha seleccionado horario</string>
    <string name="selecciona_entradas">No se han seleccionado entradas</string>
    <string name="cuenta_google">Acción deshabilitada con cuenta Google</string>
    <string name="no_registrado">Usuario no registrado o contraseña incorrecta</string>
    <string name="registro">Registro</string>
    <string name="registro_mensaje">Usuario no registrado, ¿Desea registrar a este usuario?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="usuario_ya_registrado">Usuario ya registrado</string>
</resources>