<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="@dimen/margen_app">


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/hintetEmail"
        android:inputType="textEmailAddress"
        android:layout_centerInParent="true"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_below="@id/etEmail"
        android:hint="@string/hintetPassword"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/margen_app"/>


    <LinearLayout
        android:id="@+id/llBotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/etPassword"
        android:layout_marginTop="@dimen/margen_app">

        <Button
            android:id="@+id/btnAcceder"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_acceder"
            android:layout_marginEnd="@dimen/margen_app"/>

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_registrar"
            android:layout_marginStart="@dimen/margen_app"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnBorrarCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llBotones"
        android:text="@string/btn_borrar_cuenta"/>


</RelativeLayout>