<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.PerfilFragment">

    <TextView
        android:id="@+id/tvPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="@dimen/tv_usuario_size"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btnBorrarCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_borrar_cuenta"
        android:layout_below="@id/tvPerfil"
        android:layout_marginTop="@dimen/margen_app"/>

    <LinearLayout
        android:id="@+id/llCambioPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_app"
        android:orientation="horizontal"
        android:layout_below="@id/btnBorrarCuenta">

        <EditText
            android:id="@+id/etNuevaPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_nueva_pwd"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/margen_app"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btnCambiarPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_cambiar_pwd"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>